          Suggested by David Fogel
        - Added a LoggeFacade class and a related property on the 
          Engine to allow the replacement of the default JULI logging 
          mechanism. 
        - Added an SLF4J extension with a LoggerFacade for the Restlet 
          Engine providing an optimal bridge to SLF4J.
        - Updated GWT to version 1.7.1.
    - Misc
        - Added Velocity template in the org.restlet.example project.
          Reported by Ben Vesco.
- 2.0 Milestone 5 (2009-09-28)
    - API changes
        - Moved Message, Request and Response classes from the
          org.restlet.data to the org.restlet package as they are
          core artifacts of the API used in Uniform interface.
        - Deprecated Redirector.MODE_DISPATCHER to introduce support
          for MODE_CLIENT_DISPATCHER and MODE_SERVER_DISPATCHER.
        - ServerResource#getPreferredVariant() is now protected.
        - Moved Template and Variable classes from "org.restlet.util"
          to "org.restlet.routing" package.
        - Moved Restlet#handle(Request) method to Client class.
        - Added "inboundRoot" and "outboundRoot" properties to 
          Application and deprecated the "root" property and the 
          createRoot() method. The outbound root, is the hook for 
          client-side routing and points by default to the context's 
          client dispatcher, but can be changed by the user to do 
          custom routing/filtering. New createInboundRoot() and 
          createOutboundRoot() methods can be overriden.
        - The ServerResource#getVariants() method now returns a 
          modifiable list of variants instead of a map.
        - Refactored the ServerResource class so that annotated methods
          are invoked through the regular get(), get(Variant), post(),
          post(Variant) methods instead of using a separate call path.
        - ServerResource now has protected getConverterService() and
          getMetadataService() methods.